<resources>
    <string name="app_name">ProTest</string>
    <string name="title_activity_browse">Browse</string>
    <string name="email_field_description">Адрес электронной почты</string>
    <string name="name_field_description">Имя или псевдоним</string>
    <string name="password_input_description">Пароль</string>
    <string name="pick_role">Выберите роль</string>
    <string name="testee">тестируемый</string>
    <string name="tester">тестировщик</string>
    <string name="moderator">модератор</string>
    <string name="register">зарегистрироваться</string>
    <string name="sign_in">войти</string>
    <string name="sign_in_button">вход</string>
    <string name="sign_up_button">регистрация</string>
    <string name="test_name_input_hint">Название</string>
    <string name="test_description_input_hint">Описание</string>
    <string name="title_activity_create_question">CreateQuestion</string>
    <string name="title_activity_create_test">CreateTest</string>
    <string name="limit_exceeded_error">Достигнуто предельно допустимое число элементов</string>
    <string name="element_deleted">Элемент удален</string>
    <string name="test_found">Тест найден</string>
    <string name="cancel">Отмена</string>
    <string name="failed_to_restore">Не удалось восстановить элемент</string>
    <string name="answer_too_short">Данный вариант ответа слишком короткий</string>
    <string name="too_few_answers">Вариантов ответа должно быть хотя бы %1$d</string>
    <string name="no_correct_answers_found">Хотя бы один из вариантов ответов должен быть верным</string>
    <string name="question_too_short">В вопросе должно быть хотя бы %1$d символов</string>
    <string name="too_many_questions">Достигнуто предельно допустимое число вопросов</string>
    <string name="description_too_short">Описание должно содержать хотя бы %1$d символов</string>
    <string name="too_few_questions">Нужно хотя бы %1$d вопросов</string>
    <string name="title_too_short">Название теста должно содержать хотя бы %1$d символов</string>
    <string name="no_match_found">Поиск не дал результата</string>
    <string name="question_input_prompt">Вопрос</string>
    <string name="answer_input_prompt">Вариант ответа</string>
    <string name="add_button">добавить</string>
    <string name="add_question_button">добавить вопрос</string>
    <string name="privacy_switch_prompt_off">Открытый: после создания доступен всем зарегистрированным пользователям</string>
    <string name="switch_hidden">Закрытый: доступ только по паролю, доступному после заврешения создания</string>
    <string name="add_tags">Добавить теги</string>
    <string name="tag_added">тег добавлен: %1$s</string>
    <string name="test_added">тест загружен в базу данных</string>
    <string name="public_access_key">abcdefg</string>
    <string name="pass_test">пройти тест</string>
    <string name="find_test">найти тест</string>


    <string-array name="tags">
        <item>программирование</item>
        <item>Java</item>
        <item>эволюционная биология</item>
        <item>биология</item>
        <item>алгоритмы</item>
        <item>структуры данных</item>
    </string-array>
    <string name="title_activity_pass_test">PassTest</string>
    <string name="find_test_by_id">найти тест по id</string>
    <string name="failed_to_find_test">Не удалось найти тест</string>
    <string name="sufficient_amount_explanation">Число выбранных тестируемым верных вариантов ответа, достаточное для того, чтобы считать ответ верным</string>
    <string name="invalid_sufficient_amount">Некорректное число требуемых ответов</string>
    <string name="hide_test_result">Не показывать результат тестируемому</string>
    <string name="show_test_result">Показывать результат тестируемому</string>
    <string name="visible_result_for_public_test">Результат общедоступных тестов всегда должен быть виден пользователю</string>
    <string name="new_test_id_and_key">ID: %1$s\nkey: %2$d</string>
    <string name="new_test_id">ID: %1$s</string>
    <string name="hide_result">Не показывать результат тестируемому</string>
    <string name="show_result">Показывать результат тестируемому</string>
    <string name="make_test_private">Доступ к тесту по паролю</string>
    <string name="make_test_public">Общедоступный тест</string>
    <string name="int_parse_fail">Пароль может содержать только цифры и знак минус</string>
    <string name="tag_removed">тег удален: %1$s</string>
    <string name="ok">ок</string>
    <string name="id">ID: %1$s</string>
    <string name="test_by_password_error">Не удалось получить доступ к базе данных</string>
    <string name="test_not_found">Не удалось найти тест</string>
    <string name="test_passed">%1$d верных ответов из %2$d возможных</string>
    <string name="test_result">Тест пройден</string>
    <string name="test_complete">Прохождение теста завершено, но тестировщик отключил отображение результатов</string>
    <string name="time_spent">%1$d мин. %2$d сек.</string>
    <string name="result_upload_fail">Не удалось отправить результат тестирования тестировщику</string>
    <string name="email_error">Некоррекнтый адрес электронной почты</string>
    <string name="password_error">Не менее 8 символов; обязательны строчные и заглавные буквы, цифры</string>
    <string name="nickname_error">Необходимо более 3-х символов; только латинские буквы и пробелы</string>
    <string name="signin_fail">Не удалось войти в приложение</string>
    <string name="invalid_inputs">В одно или несколько полей введены некоррекнтые данные</string>
    <string name="signup_fail">Регистрация не удалась</string>
    <string name="testee_hint">Тестируемому доступны поиск и прохождение тестов</string>
    <string name="tester_hint">Тестировщику доступны создание, поиск и прохождение тестов</string>
    <string name="moder_hint">Модератор имеет доступ ко всем тестам и может их удалять</string>
    <string name="test_id">Идентификатор теста: %1$s\n</string>
    <string name="line_separator">%1$s\n</string>
    <string name="test_approved">Тест одобрен</string>
    <string name="test_removed">Тест удален</string>
    <string name="result_sent">Результат отправлен тестировщику</string>
</resources>
