<?xml version="1.0" encoding="utf-8"?>

<!-- Здесь друг на друге лежат страничка приветствия с выбором регистрации/входа, страничка
     регистрации и страничка входа. Переход между ними выполняется анимацией -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.Authenticator"
    tools:visibility="visible">

    <!-- Форма регистрации -->
    <LinearLayout
        android:id="@+id/layout_signup"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_spacing_bottom"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signup_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_field_description"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_nickname_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_spacing_bottom"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signup_nickname_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_field_description"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_spacing_bottom"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signup_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_input_description"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/signup_role_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_role" />

        <RadioGroup
            android:id="@+id/signup_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/signup_role_testee">

            <RadioButton
                android:id="@+id/signup_role_testee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testee"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="553dp" />

            <RadioButton
                android:id="@+id/signup_role_tester"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tester"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="553dp" />

            <RadioButton
                android:id="@+id/signup_role_moder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moderator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="553dp" />

        </RadioGroup>


        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:onClick="signUp"
            android:text="@string/register" />

    </LinearLayout>

    <!-- Форма входа -->
    <LinearLayout
        android:id="@+id/layout_signin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signin_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_spacing_bottom"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signin_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_field_description"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signin_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_spacing_bottom"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signin_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_input_description"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/signin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:onClick="signIn"
            android:text="@string/sign_in" />

    </LinearLayout>

    <!-- Экран с кнопками переход к регистрации или входу -->
    <LinearLayout
        android:id="@+id/layout_welcome"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goToSignin"
            android:text="@string/sign_in_button" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goToSignup"
            android:text="@string/sign_up_button" />

    </LinearLayout>

    <!-- Круглая крутящаяся полоска загрузки -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/loading_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/common_google_signin_btn_text_light_default"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/loading_spinner"
            style="?android:progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>